Lagt til Script JS

--- a/index.html
+++ b/index.html
@@ -175,5 +175,6 @@
                 <img src="img/legs1.png"/>
                 <button>▶</button>
                 </div>
+                <script src="Script.JS"></script>
             </body>
                     
